--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
+<h1>Voici toutes vos tâches</h1>
+
+<ul>
+  <% @tasks.each do |task| %>
+  <li> <%= link_to task.name, task_path(task)%> </li>
+  <% end %>
+</ul>
+
+<%= link_to "Ajoutez une tache", new_task_path %>
+
