--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Tasks#show</h1>
-<p>Find me in app/views/tasks/show.html.erb</p>
+<h1>Detail de votre tâche</h1>
+
+<h2><%= @task.name %></h2>
+<p><%= @task.date %> </p>
+<p><%= @task.content %> </p>
